<resources>
    <string name="app_name">pills manager</string>
    <string name="inter">ali</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>


    <string name="menu_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Here insert username @id/userName</string>
    <string name="nav_header_subtitle">Edit Profile @id/editUserName</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="add_dependent">add dependent</string>
    <string name="profile">profiles</string>
    <string name="invite_friend">invite friends</string>
    <string name="logout">logout</string>
    <string name="about">about</string>
    <string name="pick_dependent">pick dependent</string>
    <string name="welcome_to_app">Welcome To Med App</string>
    <string name="drug_name_text">adol</string>
    <string name="drug_dose_id">add drug dose in @+id/drug_dose</string>
    <string name="refill">refill</string>
    <string name="mediciations">mediciations</string>
    <string name="name_of_medicine">Name Of Medicine</string>
    <string name="form_of_med">Form Of Med</string>
    <string name="reason_of_taking_medecine">Reason_of_Taking_Medecine</string>
    <string name="alarm_name">Name_of_alarm</string>
    <string name="add">Add</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="every_day">Every day</string>
    <string name="every_week">Every Week</string>
    <string name="every_month">Every Month</string>
    <string name="treatment_duration">Treatment_duration</string>
    <string name="save">save</string>
    <string name="back">back</string>
    <string name="gender">Gender</string>
    <string name="first_name">first name</string>
    <string name="second_name">second name</string>
    <string name="birth_date">birth date</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="other">other</string>
    <string name="done">done</string>
    <string name="todo">TODO</string>
    <string name="edit_dependent">edit dependent</string>
    <string name="empty" />
    <string name="password_is_missing">Password is Missing</string>
    <string name="email_is_missing">Email is Missing</string>
    <string name="fullname_is_missing">Full Name is Missing</string>
    <string name="password_donot_match">Password Do Not Match</string>
    <string name="start_date">17 march 2021</string>
    <string name="end_date">16 april 2022</string>
    <string name="reminders">Reminders</string>
    <string name="reason">Reason Of Med</string>
    <string name="reason_val">Cancer</string>
    <string name="prescription_refill">Prescription Refill</string>
    <string name="pills_left">6 pills left</string>
    <string name="when_to_refill_txt">refill Reminder:when i have 1 meds</string>
    <string name="select_days_from_week">Select days from week</string>
    <string name="select_month">select month</string>
    <string name="sat_day">sat</string>
    <string name="sun_day">sun</string>
    <string name="mon_day">mon</string>
    <string name="tue_day">tue</string>
    <string name="wed_day">wed</string>
    <string name="thu_day">thu</string>
    <string name="fri_day">fri</string>
    <string name="dose_quantity">dose quantity</string>
    <string name="next">next</string>
    <string name="name_of_medecine">name of med</string>
    <string name="form_of_medicine">form of med</string>
    <string name="reason_of_med">reason of med</string>
    <string name="strength_of_medecine">strength of medecine</string>
    <string name="temp_id_drug_name">\@id/drug_name</string>
    <string name="temp_id_drug_name_2">\@ id/drug_name_2</string>
    <string name="active_meds">active mediciations</string>
    <string name="inactive_meds">inactive mediciations</string>
    <string name="textview">TextView</string>
    <string name="additional_dose">additional dose</string>
    <string name="please_enter_valid_data">please enter valid data</string>
    <string name="db_Event_id">84537</string>
    <string name="db_event_id_tag">DBEventIDTag</string>
    <string name="channel_name">MEDICALAPPCHANNEL</string>
    <string name="channel_description">BESTCHANNEL</string>
    <string name="notification_channel_id">medicalAppNotification</string>
    <string name="notification_description">Hello, you got medicines needs refill please give attention</string>
    <string name="name_shared_pre">MyName</string>
    <string name="signup_shared_pre">MyPrefs</string>
    <string name="total_quantity">total quantity you have of this medicine</string>
    <string name="enter_total_quantity">enter total quantity you have</string>
    <string name="reminder_at">remind me at</string>
    <string name="enter_remind_at">enter quantity to remind at</string>
    <string name="cancel">cancel</string>
    <string name="sorry">"sorry "</string>
    <string name="remind_at_quantity_cannot_be_zero">remind at quantity can\'t be 0</string>
    <string name="we_will_remind_you">we will remind you every 15 mins</string>
    <string name="notification_off">reminder off</string>
    <string name="refill_reminder_at">Refill Remind At</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_dose_manager">DoseManagerActivity</string>
    <string name="action_settings">Settings</string>
</resources>