<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="eg.iti.pillsmanager.home.view.Home"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_add_dependent"
        android:name="eg.iti.pillsmanager.adddependent.view.AddDependentFragment"
        android:label="@string/add_dependent"
        tools:layout="@layout/fragment_add_dependent" />

    <fragment
        android:id="@+id/navigation_edit_dependent"
        android:name="eg.iti.pillsmanager.editdependent.view.EditDependentFragment"
        android:label="@string/edit_dependent"
        tools:layout="@layout/fragment_edit_dependent" />


    <fragment
        android:id="@+id/navigation_pick_dependent"
        android:name="eg.iti.pillsmanager.pickdependent.view.PickDependnet"
        android:label="@string/pick_dependent"
        tools:layout="@layout/fragment_pick_dependent" />

    <fragment
        android:id="@+id/navigation_invite_friend"
        android:name="eg.iti.pillsmanager.invitefriend.view.InviteFriend"
        android:label="@string/invite_friend"
        tools:layout="@layout/fragment_invite_friend" />

    <fragment
        android:id="@+id/navigation_logout"
        android:name="eg.iti.pillsmanager.logout.view.Logout"
        android:label="@string/logout"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="eg.iti.pillsmanager.about.view.About"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/navigation_refill"
        android:name="eg.iti.pillsmanager.refill.view.Refill"
        android:label="@string/refill"
        tools:layout="@layout/fragment_refill" />

    <fragment
        android:id="@+id/navigation_mediciation"
        android:name="eg.iti.pillsmanager.medicinces.view.Medicine"
        android:label="@string/mediciations"
        tools:layout="@layout/fragment_medicine" />

</navigation>