<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/text1"
            android:title="@string/profile" />

        <item
            android:id="@+id/navigation_add_dependent"
            android:icon="@drawable/side_nav_bar"
            android:title="@string/add_dependent" />

        <item
            android:id="@+id/navigation_pick_dependent"
            android:icon="@drawable/side_nav_bar"
            android:title="@string/pick_dependent" />


        <item
            android:id="@+id/text2"
            android:title="@string/profile" />
        <item
            android:id="@+id/navigation_invite_friend"
            android:icon="@drawable/side_nav_bar"
            android:title="@string/invite_friend" />
        <item
            android:id="@+id/navigation_logout"
            android:icon="@drawable/ic_circle_white_8dp"
            android:title="@string/logout" />
        <item
            android:id="@+id/navigation_about"
            android:icon="@drawable/ic_circle_white_8dp"
            android:title="@string/about" />


    </group>
        </menu>