<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="8"
        tools:context=".addDrug.view.AddMedFragmentSecond">

    <RadioGroup
        android:id="@+id/select_days"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/every_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/every_day" />

        <RadioButton
            android:id="@+id/select_days_from_week"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_days_from_week" />

        <RadioButton
            android:id="@+id/select_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_month" />
    </RadioGroup>
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/time_of_med"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:inputType="time"
            android:hint="Choose the time"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="7"
            android:layout_marginBottom="10dp">
            <CheckBox
                android:id="@+id/sat_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/sat_day" />
            <CheckBox
                android:id="@+id/sun_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sun_day" />
            <CheckBox
                android:id="@+id/mon_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mon_day" />
            <CheckBox
                android:id="@+id/tue_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tue_day" />
            <CheckBox
                android:id="@+id/wed_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wed_day" />
            <CheckBox
                android:id="@+id/thu_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/thu_day" />
            <CheckBox
                android:id="@+id/fri_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fri_day" />

        </LinearLayout>


        <EditText
            android:id="@+id/day_of_month"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="date"
            android:layout_marginLeft="10dp"
            android:hint="Choose the date"
            android:layout_marginBottom="10dp"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:id="@+id/dose_quantity"
                android:layout_height="wrap_content"
                android:text="@string/dose_quantity"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"/>
            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="16dp"
                android:id="@+id/dose_num"
                android:layout_weight="1"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:id="@+id/btn_next_add_second"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"/>
        </LinearLayout>
</LinearLayout>