<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="addDrug.view.AddMedicationFragment" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_of_medicine"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:id="@+id/name_of_med"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/value_of_med_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/about"
        android:minWidth="48dp"
        android:minHeight="48dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_of_med"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:id="@+id/form_of_med"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/value_of_form_med"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/inter"
        android:minWidth="48dp"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/reason_of_taking_medecine"
        android:id="@+id/reason_of_med"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/value_of_reason_med"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/inter"
        android:minWidth="48dp"
        android:minHeight="48dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="150dp"
      />


</LinearLayout>

